--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1>BONB.IN Project</h1>
+<center><h1>BONB.IN Project</h1>
+  <a href="http://imgur.com/umPEy5o"><img src="http://i.imgur.com/umPEy5o.jpg?1" title="source: imgur.com" /></a>
+</center>
+
